Conclusão de exercícios em JavaScript para prática da linguagem.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Expressões e Operadores</title>
 </head>
 <body>
-    <script src="./SCRIPTS/expressionsAndOperators.js"></script>
+    <!-- <script src="./SCRIPTS/expressionsAndOperators.js"></script>
     <script src="./SCRIPTS/controlFlow.js"></script>
+    <script src="./SCRIPTS/notasEscolares.js"></script>
+    <script src="./SCRIPTS/gastosFamiliar.js"></script>
+    <script src="./SCRIPTS/convertDegree.js"></script>
+    <script src="./SCRIPTS/arraySearching.js"></script> -->
 </body>
 </html>
